Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.3.1
-
-
9d7bf51fc (dev), 5aa0a4db8 (6.5)
Description
How to reproduce:
- extract the example project from
QTBUG-101004 - run qmllint main.qml
Output:
$ ~/Qt/6.3.1/gcc_64/bin/qmllint ./qtbug101004/main.qml Warning: ./qtbug101004/main.qml:4:1: Warnings occurred while importing module "Qt5Compat.GraphicalEffects": import Qt5Compat.GraphicalEffects ^^^^^^ --- Warning: QML types file does not exist: /home/egon/Qt/6.3.1/gcc_64/qml/Qt5Compat/GraphicalEffects/private/plugins.qmltypes --- Info: ./qtbug101004/main.qml:4:1: Unused import at ./qtbug101004/main.qml:4:1 import Qt5Compat.GraphicalEffects ^^^^^^ Info: ./qtbug101004/main.qml:3:1: Unused import at ./qtbug101004/main.qml:3:1 import QtQuick.Controls ^^^^^^
The Qt5Compat module is installed, the example works when run from Qt Creator, and the qmltypes file is located at:
/home/egon/Qt/6.3.1/gcc_64/qml/Qt5Compat/GraphicalEffects/plugins.qmltypes
Note the lack of private.
Attachments
Issue Links
- is duplicated by
-
QTBUG-104575 Qt5Compat.GraphicalEffects is not qmllint compatible
-
- Closed
-