Port Qt5Compat.GraphicsEffects.private to qmltyperegistrar

Fixes the missing plugins.qmltypes that makes qmllint complain about
uses of the module.

Fixes: QTBUG-105279
Change-Id: I9e2fbe62631faf4481be66ad34c990b7f019bb8c
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 9d7bf51fc62e99540bc41b372ae00ccce063b4cc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>